--- a/src/css/step5.css
+++ b/src/css/step5.css
@@ -17,7 +17,7 @@
 .pageHeader-navbar .logo {
   float: left;
   width: 180px;
-  background-image: url(/images/logo.png);
+  background-image: url(../images/logo.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
