--- a/src/css/step6.css
+++ b/src/css/step6.css
@@ -26,7 +26,7 @@ body {
 .pageHeader-navbar .logo {
   float: left;
   width: 180px;
-  background-image: url(/images/logo.png);
+  background-image: url(../images/logo.png);
   background-repeat: no-repeat;
   background-size: contain;
 }
